BB-16094: Long words German edition break the page layout - fix align for Germany localization

--- a/src/Oro/Bundle/EmailBundle/Resources/public/css/scss/email-notification-menu.scss
+++ b/src/Oro/Bundle/EmailBundle/Resources/public/css/scss/email-notification-menu.scss
@@ -33,7 +33,7 @@
 
     .dropdown-menu {
         background-color: $email-dropdown-bg;
-        width: $email-recent-emails-popup-width !important;
+        width: $email-recent-emails-popup-width;
         padding: 0;
         outline: none;
 
